--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "webpack-dev-server": "^2.8.2"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-runtime": "^6.26.0",
     "milligram": "^1.3.0",
     "preact": "^8.2.5",
