--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "gulp": "^3.9.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.1.0",
-    "react-hot-loader": "3.0.0",
+    "react-hot-loader": "next",
     "react-test-renderer": "^15.6.1",
-    "redux-devtools-extension": "^2.13.2",
+    "redux-devtools-extension": "^2.13.5",
     "snazzy": "^7.0.0",
     "standard": "^10.0.3",
     "standard-loader": "^6.0.1",
@@ -57,6 +57,7 @@
     "webpack-dev-server": "^2.8.2"
   },
   "dependencies": {
+    "@fdaciuk/ajax": "^2.3.0",
     "axios": "^0.18.0",
     "babel-runtime": "^6.26.0",
     "milligram": "^1.3.0",
@@ -65,8 +66,9 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "uuid": "^3.2.1"
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "uuid": "^3.1.0"
   }
 }
